demos/k8s-demo-monitoring/template_grafana_ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 annotations:
   kubernetes.io/ingress.class: nginx
 name: grafana
spec:
 rules:
 - host: grafana.DOMAIN
   http:
     paths:
     - backend:
         serviceName: grafana
         servicePort: 80
